--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                 a small crust of gingerbread that Susie threw away.
             </p>
         </div>
+
+        <div id="instructions">
+            <p id="instructionsText">Highlight some text from the short stories on the right side of the page. Then try
+                out some of the tools on the left.
+            </p>
+        </div>
+
         <script src="script.js"></script>
 </body>
 
